@@ -49,6 +49,7 @@ chromium (117.0.5938.62-1) unstable; urgency=high
       scope workarounds.
     - bookworm/initialize-const-ctor.patch: clang-14 workaround to init a
       const member inside a struct.
+    - ppc64le/libaom/0001-Add-ppc64-target-to-libaom.patch: refresh.
   * Switch to using bundled brotli, as the version in debian is too old.
     And so we can drop d/patches/bookworm/brotli.patch, too.
   * Switch from clang-14 to clang-16.
